fix: post.getFiles() -> post.getPostHasFile().getFile()