@@ -5,6 +5,7 @@ import static lombok.AccessLevel.PRIVATE;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
 import com.keeper.homepage.domain.post.entity.Post;
+import com.keeper.homepage.domain.post.entity.PostHasFile;
 import java.time.LocalDateTime;
 import java.util.List;
 import lombok.AllArgsConstructor;
@@ -46,9 +47,10 @@ public class PostDetailResponse {
         .visitCount(post.getVisitCount())
         .thumbnailPath(post.getThumbnailPath())
         .content(post.getContent())
-        .files(post.getFiles().stream()
+        .files(post.getPostHasFiles().stream()
+            .map(PostHasFile::getFile)
             .map(FileResponse::from)
-            .collect(toList()))
+            .toList())
         .likeCount(post.getPostLikes().size())
         .dislikeCount(post.getPostDislikes().size())
         .allowComment(post.allowComment())
